--- a/calendar.yaml
+++ b/calendar.yaml
@@ -519,6 +519,7 @@
 - name: Moogle Treasure Trove – The Second Hunt for Genesis
   type: event
   color: "#a834eb"
+  url: https://na.finalfantasyxiv.com/lodestone/special/mogmog-collection/202405/nprq4eanp3
   from: 2024-05-14
   to: 2024-06-24
   allDay: true
@@ -531,31 +532,34 @@
 - name: Make It Rain
   type: event
   color: "#a8a82d"
+  url: https://na.finalfantasyxiv.com/lodestone/special/2024/the_make_it_rain_campaign/jgmo8djkm5
   from: 2024-05-15
   to: 2024-05-31
   allDay: true
 - name: Letter from the Producer Live Part LXXXI
   short: PLL LXXXI
   type: live letter
-  at: 2024-05-16 11:00:00
   url: https://sqex.to/oX18H
+  at: 2024-05-16 11:00:00
 - name: Fall Guys Collaboration
   type: event
   color: "#7d2885"
+  url: https://na.finalfantasyxiv.com/lodestone/special/fallguys/
   from: 2024-05-23
   to: 2024-06-10
   allDay: true
 - name: Dragon Quest X Collaboration
   type: event
   color: "#e03f77"
+  url: https://sqex.to/l6CHL
   from: 2024-06-05
   to: 2024-06-20
   allDay: true
 - name: Letter from the Producer Live Part LXXXII
   short: PLL LXXXII
   type: live letter
-  at: 2024-06-14
-  allDay: true
+  url: https://www.youtube.com/watch?v=0JxPTIiDWtI
+  at: 2024-06-14 11:00:00
 - name: Dawntrail (Patch 7.0)
   short: Patch 7.0
   type: patch
