--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -1,7 +1,7 @@
 id: 937
 patch: "6.4"
 date: 2023-05-30
-modified: 2023-10-12
+modified: 2024-06-14
 by:
   id: 27637301
   role: author
@@ -405,6 +405,8 @@ actions:
     mechanic: mech.limit
     compact: trim
     children:
+      - at: 0
+        id: <untargetable>
       - at: 4951
         id: firemeld
         link: and
@@ -653,6 +655,8 @@ timeline:
     id: levinstrike
   - at: 233111
     id: lc1
+  - at: 257523
+    id: <targetable>
   - at: 264682
     id: two-minds
     link: then
