--- a/raids/p10s.yaml
+++ b/raids/p10s.yaml
@@ -8,7 +8,7 @@ by:
 tier: Anabaseios
 boss: Pandæmonium
 HP: 43656896
-average_hp: 73000
+party_hp: 73000
 autos:
   mechanic: auto.single
   type: magic
